dataset1235/2025-2/1153765216/users/2249779960/executions/2372395858_2249045874.log
== SUBMISSION (2025-08-28 19:13:30)
-- CODE: 
lado=float(input("lado: "))

area =2*math.tan(math.p1/8)
apotema = lado/ 2 area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:20:10)
-- CODE: 
lado=float(input("lado: "))

area =2*math( .tan(math.pi/8))
apotema = lado / 2*area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 3
    area =2*math( .tan(math.pi/8))
                  ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:12:14)
-- CODE: 
lado=float(input("lado: "))

tans=2*math.tan(math.p1/8)
apotema = lado/ 2 area 4*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area 4*lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:15:12)
-- CODE: 
lado=float(input("lado: "))

area =2*math.tan(math.pi/8)
apotema = lado/ 2 area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:20:24)
-- CODE: 
lado=float(input("lado: "))

area =2*math(tan(math.pi/8))
apotema = lado / 2*area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math(tan(math.pi/8))
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:13:16)
-- CODE: 
lado=float(input("lado: "))

area=2*math.tan(math.p1/8)
apotema = lado/ 2 area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:12:46)
-- CODE: 
lado=float(input("lado: "))

tans=2*math.tan(math.p1/8)
apotema = lado/ 2 area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/ 2 area *lado*apotema
                      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:18:24)
-- CODE: 
lado=float(input("lado: "))

area =2*math.tan(math.pi/8)
apotema = lado / 2*area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =2*math.tan(math.pi/8)
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:52:42)
-- CODE: 
from math import *

lado = float(imput("LADO: "))
apotesa=lado/2"math.tan(math.p1/10)
area=5 * lado
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotesa=lado/2"math.tan(math.p1/10)
                  ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:10:07)
-- CODE: 
lado=float(input("lado: "))

tans=2*math.tan(math.p1/8)
apotema = lado/tans area*4*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado/tans area*4*lado*apotema
                        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:18:03)
-- CODE: 
lado=float(input("lado: "))

area =2*math.tan(math.pi/8)
apotema = lado / 2 area *lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 4
    apotema = lado / 2 area *lado*apotema
                       ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
